# CodeInC

./: .gitignore  A.txt  CMakeLists.txt  oblig5_Matrix_code.c  oblig_9.c  oppgave3_1.c  oppgave3_2.c  oppgave3_3.c  oppgave4_4.c  oppgave5_1b.c  oppgave5_3.c  oppgave6_1.c  oppgave6_3.c  oppgave7_2.c  oppgave8_1.c  oppgave8_2.c  oppgave_1.c  oppgave_2.c  oppgave_3.c
