cmake_minimum_required(VERSION 3.29)
project(CodeC C)

set(CMAKE_C_STANDARD 11)

add_executable(CodeC main.c
        oppgave4_4.c)
add_executable(oppgave1_exec oppgave_1.c)
add_executable(oppgave2_exec oppgave_2.c)
add_executable(oppgave3_exec oppgave_3.c)
add_executable(oppgave3_1exec oppgave3_1.c)
add_executable(oppgave3_2exec oppgave3_2.c)
add_executable(oppgave3_3exec oppgave3_3.c)
add_executable(oppgave4_4exec oppgave4_4.c)
add_executable(oppgave5_1bexec oppgave5_1b.c)