cmake_minimum_required(VERSION 3.29)
project(CodeC C)

set(CMAKE_C_STANDARD 11)

add_executable(CodeC main.c
        oppgave4_4.c)
add_executable(oppgave1_exec oppgave_1.c)
add_executable(oppgave2_exec oppgave_2.c)
add_executable(oppgave3_exec oppgave_3.c)
add_executable(oppgave3_1exec oppgave3_1.c)
add_executable(oppgave3_2exec oppgave3_2.c)
add_executable(oppgave3_3exec oppgave3_3.c)
add_executable(oppgave4_4exec oppgave4_4.c)
add_executable(oppgave5_1exec oppgave5_1b.c)
add_executable(oblig5_Matrix_codeexec oblig5_Matrix_code.c)
add_executable(oppgave5_3exec oppgave5_3.c)
add_executable(oppgave6_1exec oppgave6_1.c)
add_executable(oppgave6_3exec oppgave6_3.c)
add_executable(oppgave7_2exec oppgave7_2.c)
add_executable(oppgave8_1exec oppgave8_1.c)
add_executable(oppgave8_2exec oppgave8_2.c)